--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html class="h-100" lang="en">
   
@@ -5,6 +6,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<link rel="stylesheet" href="https://use.typekit.net/rmi4chg.css">
+	<link rel="stylesheet" href="https://use.typekit.net/zws2sik.css">
 
     <!-- Links to the CSS styles from Bootstrap. -->
     <!-- -->
@@ -14,7 +17,7 @@
     <!-- Links to our additional CSS styles -->
     <link rel="stylesheet" href="css/styles.css">
 
-    <title>Hailey Janssen</title>
+    <title>Hailey Janssen Resume</title>
   </head>
   <!-- End of the head -->
 
@@ -43,14 +46,14 @@
             "w-100" makes sure the image takes the full width of the column it's in
             "rounded-circle" cuts a circle around the image
           -->
-          <img class="w-100 rounded-circle my-3" src="images/profilepicture.jpg" alt="Portrait of myself" width="160">
+          <img class="photo-hailey" src="images/cvpicture.jpg" alt="Portrait of myself" width="180">
         </div>
         <!--
           A container to wrap around your name and tagline. Full-width at small size, then columns of increasing size.
         -->
         <div class="col-12 col-sm-8 col-md-9 col-lg-10 my-3 header-content">
           <h1 class="fw-bolder">Hailey Janssen</h1>
-          <h5 class="fst-italic tagline">Your expert in coding.</h5>
+          <h5 class="headerfive">Creative Business Student</h5>
         </div>
       </header>
 
@@ -70,7 +73,7 @@
             <section> is yet another semantic element. The first one is for professional experience.
           -->
           <section class="my-3 biography-section">
-            <h2>Professional Experience</h2>
+            <h2 class="professionalexperience">Professional Experience</h2>
             <!--
               Each list item (li) in the unordered list (ul) below will be one job.
               "list-unstyled" is a class that hides the bullet points of a list.
@@ -81,16 +84,16 @@
               <li class="biography-item row mb-2">
                 <!-- We're using a grid inside a grid so we can align logos and text -->
                 <div class="logo-container col-3 col-sm-2 col-md-3 col-lg-2">
-                  <img class="biography-logo mw-100 d-block mx-auto" src="images/employers/projector.svg" alt="Company logo" width="80">
+                  <img class="biography-logo mw-100 d-block mx-auto" src="images/employers/graphicdesigner.png" alt="Icon of design computer" width="80">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
-                  <h4>Production Assistant, Production Company</h4>
-                  <h5>April&ndash;July 2019</h5>
+                  <h4>Graphic Design Intern, Fingerspitz</h4>
+                  <h5>September 2022 &ndash;June 2023</h5>
                   <!-- Use the list below to talk about your achievements -->
                   <ul class="biography-details list-unstyled">
-                    <li>Coordinated shootings in studio and on location</li>
-                    <li>Liaised with local authorities and with suppliers</li>
-                    <li>Part of my studies at Breda University of Applied Sciences</li>
+                    <li>Further development with Adobe</li>
+                    <li>Working with professional clients and deadlines</li>
+                    <li>Participated in workshops (scrum, growth marketing, copywriting) </li>
                   </ul>
                 </div>
               </li>
@@ -99,11 +102,14 @@
               <li class="biography-item row mb-2">
                 <div class="logo-container col-3 col-sm-2 col-md-3 col-lg-2">
                 <!-- We're using a grid inside a grid so we can align logos and text -->
-                  <img class="biography-logo mw-100 d-block mx-auto" src="images/employers/trolley.svg" alt="Company logo" width="80">
+                  <img class="biography-logo mw-100 d-block mx-auto" src="images/employers/contentworker.png" alt="Icon of content tabs" width="80">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
-                  <h4>Supermarket Employee, Supermarket chain</h4>
-                  <h5>2018</h5>
+                  <h4>Concent Worker, Ergoform</h4>
+					<h5>September 2021 &ndash; present</h5>
+				<ul class="biography-details list-unstyled">
+					<li>Creating social media plan and designing posts</li>
+                    <li>Taking professional pictures of finished interior projects</li>
                   <!-- This entry doesn't have a list of achievements, but you can copy-paste the one from above -->
                 </div>
               </li>
@@ -114,22 +120,22 @@
           <!-- We're done with jobs, let's move on to schools -->
 
           <section class="my-3 biography-section">
-            <h2>Education</h2>
+            <h2 class="education">Education</h2>
             <ul class="biography-list list-unstyled">
 
               <!-- Top item in education. And by "top", I mean a Bachelor in Creative Business at BUas. -->
               <li class="biography-item row mb-2">
                 <div class="logo-container col-3 col-sm-2 col-md-3 col-lg-2">
-                  <img class="biography-logo mw-100 d-block mx-auto" src="images/schools/logo-buas.svg" alt="School logo" width="120">
+                  <img class="biography-logo mw-100 d-block mx-auto" src="images/schools/bredauniversity.png" alt="School logo" width="120">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
                   <h4>BA in Creative Business, Breda University of Applied Sciences</h4>
-                  <h5>2018&nbsp;&ndash;&nbsp;now</h5>
+                  <h5>2023&nbsp;&ndash;&nbsp;present</h5>
                   <!-- Use the list below to talk about minors, exchanges, extra-curricular activities. -->
                   <ul class="biography-details list-unstyled">
-                    <li>Member of the student participation council</li>
-                    <li>Minor in resilient entrepreneurship</li>
-                    <li>Exchange with Bournemouth University</li>
+                    <li>Creator of Deal With The Devil short movie</li>
+                    <li>Participating in the Interactive department</li>
+                    <li>Second year student</li>
                   </ul>
                 </div>
               </li>
@@ -137,13 +143,13 @@
               <!-- 2nd item in education -->
               <li class="biography-item row mb-2">
                 <div class="logo-container col-3 col-sm-2 col-md-3 col-lg-2">
-                  <img class="biography-logo mw-100 d-block mx-auto" src="images/schools/school.svg" alt="School logo" width="80">
+                  <img class="biography-logo mw-100 d-block mx-auto" src="images/schools/highschool.png" alt="School icon" width="80">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
-                  <h4>High School Diploma, City High School</h4>
-                  <h5>2018</h5>
+                  <h4>High School Diploma, De Nassau Breda</h4>
+                  <h5>2020</h5>
                   <ul class="biography-details list-unstyled">
-                    <li>Audiovisual media specialization</li>
+                    <li>Economic specialization</li>
                   </ul>
                 </div>
               </li>
@@ -172,27 +178,27 @@
             -->
             <ul class="contact-list list-unstyled">
               <li class="contact-item">
-                <a class="d-flex align-items-center" href="mailto:email@buas.nl" target="_blank">
+                <a class="d-flex align-items-center" href="mailto:233835@buas.nl" target="_blank">
                   <img class="contact-icon" src="images/icons/envelope.svg" alt="Email">
-                  email@buas.nl
+                  233835@buas.nl
                 </a>
               </li>
               <li class="contact-item">
-                <a class="d-flex align-items-center" href="https://facebook.com/" target="_blank">
-                  <img class="contact-icon" src="images/icons/facebook.svg" alt="Facebook">
-                  Facebook Profile
+                <a class="d-flex align-items-center" href="https://www.instagram.com/hailey.janssen/" target="_blank">
+                  <img class="contact-icon" src="images/icons/instagram.svg" alt="Facebook">
+                  Instagram profile
                 </a>
               </li>
               <li class="contact-item">
-                <a class="d-flex align-items-center" href="https://github.com/" target="_blank">
-                  <img class="contact-icon" src="images/icons/github.svg" alt="LinkedIn">
-                  GitHub Profile
+                <a class="d-flex align-items-center" href="tel:+31614735167" target="_blank">
+                  <img class="contact-icon" src="images/icons/phone.svg" alt="LinkedIn">
+                  06-14735167
                 </a>
               </li>
               <li class="contact-item">
-                <a class="d-flex align-items-center" href="https://www.tiktok.com/@bredauniversityas" target="_blank">
+                <a class="d-flex align-items-center" href="https://www.tiktok.com/@hailey.janssen" target="_blank">
                   <img class="contact-icon" src="images/icons/tiktok.svg" alt="Mobile Phone">
-                  TikTok @bredauniversityas
+                  Tiktok @haileyjanssen
                 </a>
               </li>
             </ul>
@@ -200,53 +206,38 @@
 
           <!-- End of contact details, moving on to languages -->
 
-          <section class="my-3 aside-section">
-            <h2>Languages</h2>
-            <!-- Each item in the list is a language. Modify, add or remove depending on what you speak -->
-            <ul class="language-list list-unstyled">
-              <li class="language-item d-flex mb-1">
-                <h5 class="language-name w-50">Dutch</h5>
-                <div class="language-level w-50 border border-info border-2 position-relative">
-                  <!-- The div below is a progress bar. Choose between w-25, w-50, w-75 and w-100 to show your level of fluency -->
-                  <div class="language-progress position-absolute bg-warning h-100 w-100"></div>
-                  <h6 class="position-absolute w-100 text-center top-0 py-1">Native</h6>
-                </div>
-              </li>
-              <li class="language-item d-flex mb-1">
-                <h5 class="language-name w-50">English</h5>
-                <div class="language-level w-50 border border-info border-2 position-relative">
-                  <!-- The div below is a progress bar. Choose between w-25, w-50, w-75 and w-100 to show your level of fluency -->
-                  <div class="language-progress position-absolute bg-warning h-100 w-75"></div>
-                  <h6 class="position-absolute w-100 text-center top-0 py-1">Full proficiency</h6>
-                </div>
-              </li>
-              <li class="language-item d-flex mb-1">
-                <h5 class="language-name w-50">Spanish</h5>
-                <div class="language-level w-50 border border-info border-2 position-relative">
-                  <!-- The div below is a progress bar. Choose between w-25, w-50, w-75 and w-100 to show your level of fluency -->
-                  <div class="language-progress position-absolute bg-warning h-100 w-50"></div>
-                  <h6 class="position-absolute w-100 text-center top-0 py-1">Advanced</h6>
-                </div>
-              </li>
-              <li class="language-item d-flex mb-1">
-                <h5 class="language-name w-50">German</h5>
-                <div class="language-level w-50 border border-info border-2 position-relative">
-                  <!-- The div below is a progress bar. Choose between w-25, w-50, w-75 and w-100 to show your level of fluency -->
-                  <div class="language-progress position-absolute bg-warning h-100 w-25"></div>
-                  <h6 class="position-absolute w-100 text-center top-0 py-1">Beginner</h6>
-                </div>
-              </li>
-            </ul>
-          </section>
+       <section class="my-3 aside-section">
+    <h2>Languages</h2>
+    <!-- Each item in the list is a language. Modify, add or remove depending on what you speak -->
+    <ul class="language-list list-unstyled">
+        <li class="language-item d-flex mb-1">
+            <h5 class="language-name w-50">Dutch</h5>
+<div class="language-level w-50 border border-danger border-2 position-relative">
+    <!-- The div below is a progress bar. Choose between w-25, w-50, w-75 and w-100 to show your level of fluency -->
+    <div class="language-progress position-absolute bg-light h-100 w-100"></div>
+    <h6 class="position-absolute w-100 text-right top-0 px-1 py-1">Native</h6>
+</div>
+        </li>
+        <li class="language-item d-flex mb-1">
+            <h5 class="language-name w-50">English</h5>
+<div class="language-level w-50 border border-danger border-2 position-relative">
+    <!-- The div below is a progress bar. Choose between w-25, w-50, w-75 and w-100 to show your level of fluency -->
+    <div class="language-progress position-absolute bg-light h-100 w-75"></div>
+    <h6 class="position-absolute w-100 text-right top-0 px-1 py-1">Full proficiency</h6>
+</div>
+
+        </li>
+    </ul>
+</section>
 
           <!-- End of contact details, moving on to other skills -->
 
           <section class="my-3 aside-section">
             <h2>Other Skills</h2>
             <ul class="skill-list list-unstyled">
-              <li class="skill-item">Team player</li>
-              <li class="skill-item">Microsoft Office Power User</li>
-              <li class="skill-item">Driving Licence</li>
+              <li class="skill-item">Adobe Programs</li>
+              <li class="skill-item">Problem solving</li>
+              <li class="skill-item">Social media</li>
             </ul>
           </section>
 
@@ -255,8 +246,8 @@
           <section class="my-3 aside-section">
             <h2>Interests &amp; Hobbies</h2>
             <ul class="skill-list list-unstyled">
-              <li class="skill-item">Formula 1 Driver</li>
-              <li class="skill-item">Netflix Binge-Watcher</li>
+              <li class="skill-item">Design and Photography</li>
+              <li class="skill-item">Interested in food lifestyle</li>
             </ul>
           </section>
 
