--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             "w-100" makes sure the image takes the full width of the column it's in
             "rounded-circle" cuts a circle around the image
           -->
-          <img class="photo-hailey" src="images/cvpicture.jpg" alt="Portrait of myself" width="180">
+          <img class="rounded-circle my-3" src="images/cvpicture.jpg" alt="Portrait of myself" width="180">
         </div>
         <!--
           A container to wrap around your name and tagline. Full-width at small size, then columns of increasing size.
