--- a/index.html
+++ b/index.html
@@ -186,19 +186,19 @@
               </li>
               <li class="contact-item">
                 <a class="d-flex align-items-center" href="https://www.instagram.com/hailey.janssen/" target="_blank">
-                  <img class="contact-icon" src="images/icons/instagram.svg" alt="Facebook">
+                  <img class="contact-icon" src="images/icons/instagram.svg" alt="Instagram">
                   Instagram profile
                 </a>
               </li>
               <li class="contact-item">
                 <a class="d-flex align-items-center" href="tel:+31614735167" target="_blank">
-                  <img class="contact-icon" src="images/icons/phone.svg" alt="LinkedIn">
+                  <img class="contact-icon" src="images/icons/phone.svg" alt="Phone">
                   06-14735167
                 </a>
               </li>
               <li class="contact-item">
                 <a class="d-flex align-items-center" href="https://www.tiktok.com/@hailey.janssen" target="_blank">
-                  <img class="contact-icon" src="images/icons/tiktok.svg" alt="Mobile Phone">
+                  <img class="contact-icon" src="images/icons/tiktok.svg" alt="TikTok">
                   Tiktok @haileyjanssen
                 </a>
               </li>
