--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
             <ul class="skill-list list-unstyled">
               <li class="skill-item">Adobe Programs</li>
               <li class="skill-item">Problem solving</li>
-              <li class="skill-item">Social media</li>
+              <li class="skill-item">Social media experience</li>
             </ul>
           </section>
 
